@@ -1,5 +1,6 @@
 {{$NEXT}}
     - Use Dist::Zilla
+    - Make all warnings fatal
 
 0.11
     - Support a 'Channels' parameter to limit the bot's attention
